# fluffy-fi

./: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build_artifacts.yaml  main-merge.yaml  pr.yml  release.yml
assets/: categories.json
background/: heartBeat.ts  index.ts  passwordCache.ts  passwordHashManager.ts  storageVault.ts  transactionManager.ts  utils.ts
background/messages/: cachePassword.ts  getCachedPassword.ts  getStorageVaultValue.ts  openSetup.ts  removeStorageVaultValue.ts  setStorageVaultValue.ts  syncTransactions.ts  unsetCachedPassword.ts
common/: PouchDbs.ts
common/components/: AccountTypeIcon.tsx  CopyButton.tsx  FluffyBackground.tsx  LoginGate.tsx  PasswordGate.tsx  PasswordSetter.tsx  PasswordValidator.tsx  PlaidConnection.tsx  PlaidLink.tsx  SecretInput.tsx  SetupGate.tsx
common/plaidTypes/: index.ts
common/utils/: constants.ts  displays.ts  getDomPath.ts  getTransactionCategoryTree.ts  settingsHooks.ts  theme.tsx  useFluffyfiWasm.ts  useLoginSession.ts  usePasswordHash.ts  usePlaidItems.ts  useSetupStep.ts  useStorageVault.ts
fluffyfi-plaid-link/: package-lock.json  package.json
fluffyfi-plaid-link/src/: App.test.tsx  App.tsx
fluffyfi-rust/: Cargo.toml
fluffyfi-rust/src/: codewars.rs  lib.rs  sunburst.rs
options/: index.tsx
options/components/: AppearanceSettings.tsx  ConnectionSettings.tsx  SecuritySettings.tsx
popup/: index.tsx
tabs/: setup.tsx  transactions.tsx
tabs/components/: AccountSelector.tsx  CashflowCard.tsx  CashflowChart.tsx  (+9 more)
tests/: sunBurstData.test.ts
