[package]
name = "fluffyfi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-utils = "0.1.2"
itertools = "0.12.1"
serde = { version = "1.0", features = ["alloc", "derive", "rc", "serde_derive"] }
serde-wasm-bindgen = "0.6.3"
ts-rs = "7.1.1"
wasm-bindgen="0.2.63"
